# file_server_client

./: CMakeLists.txt
client/: client.c  client.h  main.c
common/include/common/: file.h  message.h  util.h
common/src/: file.c  message.c  util.c
res/: test.html
server/: main.c  server.c  server.h
